--- a/home.css
+++ b/home.css
@@ -2,6 +2,24 @@ body{
     font: 18px "Montserrat", sans-serif;
 }
 
+footer{
+    background-color: black;
+    color: #ffb23e;
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer a{
+    color: #ffb23e; 
+}
+
+footer i{
+    font-size: 30px;
+    cursor: pointer;
+}
+
 .navbar{
     height: 10vh;
     min-height: 50px;
@@ -51,8 +69,8 @@ body{
 }
 
 #navbarNavDropdown{
-    font-size: 20px;
     text-align: right;
+    padding-right: 20px;
 }
 
 #capa{
@@ -119,7 +137,19 @@ body{
     border-radius: 100% 0% 0% 100%;
 }
 
+#comentarios{
+    padding: 2vh 4vw;
+}
+
 @media only screen and (max-width: 800px) {
+    footer{
+        font-size: 15px;
+    }
+
+    footer i{
+        font-size: 20px;
+    }
+
     #navbarNavDropdown{
         font-size: 12px;
     }
