--- a/home.css
+++ b/home.css
@@ -20,6 +20,10 @@ footer i{
     cursor: pointer;
 }
 
+a{
+    text-decoration: none;
+}
+
 .navbar{
     height: 10vh;
     min-height: 50px;
@@ -34,7 +38,7 @@ footer i{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    z-index: 3;
+    z-index: 6;
 }
 
 .pointer{
@@ -56,7 +60,6 @@ footer i{
 
 .collapse a{
     color: #ffb23e;
-    text-decoration: none;
 }
 
 #text{
@@ -100,7 +103,7 @@ footer i{
 }
 
 #text-terena p{
-    z-index: 3;
+    z-index: 4;
 }
 
 #povo-terena{
@@ -139,6 +142,62 @@ footer i{
 
 #comentarios{
     padding: 2vh 4vw;
+}
+
+#or_images, #obras_relacionadas h1, #historia{
+    position: relative;
+    right: 3.1vw;
+}
+
+#historia{
+    background-color: #911e14;
+    width: 100vw;
+    color: white;
+    padding: 20px 15vw;
+    border-color: #ffb23e;
+    border-style: solid none solid none;
+    border-width: 10px;
+    margin-bottom: 30px;
+}
+
+#obras_relacionadas h1{
+    font-family: 'Share Tech', sans-serif;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    width: 100vw;
+    text-shadow: 8px 8px 10px #0000008c;
+    background-color: #343a40;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
+    text-align: center;
+}
+
+#or_images{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: black;
+    width: 100vw;
+    padding: 30px 0;
+}
+
+#or_images div figcaption{
+    position: relative;
+    bottom: 20px;
+}
+
+#or_images div a figcaption{
+    color: black;
+    background-color: white;
+}
+
+#or_images div a img{
+    width: 28vw;
+}
+
+#outros{
+    text-decoration: underline;
 }
 
 @media only screen and (max-width: 800px) {
@@ -202,5 +261,20 @@ footer i{
 
     #resumo{
         margin-top: 30px;
+    }
+
+    #or_images{
+        display: block;
+        text-align: center;
+    }
+
+    #or_images div a img{
+        width: 70vw;
+    }
+
+    #or_images div a figcaption{
+        width: 70vw;
+        position: relative;
+        left: 15vw;
     }
 }
